--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,9 @@ knitr::opts_chunk$set(
 
 # PixSim
 
-The goal of PixSim is to ... work in progress. Please disregard everything written in the "Example" section
+## Overview
+
+Work in progress.
 
 ## Installation
 
@@ -31,27 +33,25 @@ You can install the development version of PixSim from [GitHub](https://github.c
 devtools::install_github("nicoscattaneo/PixSim")
 ```
 
-## Example
+## Basic usage
 
-This is a basic example which shows you how to solve a common problem:
+Work in progress.
 
 ```{r example}
 library(PixSim)
 ## basic example code
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
+Work in progress.
 
 ```{r cars}
-## summary(cars)
+## summary()
 ```
 
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this.
-
-You can also embed plots, for example:
+Work in progress.
 
 ```{r pressure, echo = FALSE}
-## plot(pressure)
+## plot()
 ```
 
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
+Work in progress.
