work in examples README

--- a/README.Rmd
+++ b/README.Rmd
@@ -42,7 +42,7 @@ library("data.table")
 ```
 
 
-```{r example}
+```{r example, warning=FALSE}
 library("PixSim")
 
 PixelTableCopy <- data.table::copy(PixelTable)
