--- a/README.Rmd
+++ b/README.Rmd
@@ -53,7 +53,7 @@ PixelTableCopy <- data.table::copy(PixelTable)
 ## species groups in Norway
 Functions <- list(GrowthModels = GrowthModels)
 
-## "GrowthModels" functions needs equations and parameters to be specified.
+## "GrowthModels" function needs equations and parameters to be specified.
 args(GrowthModels)
 myMM <- ModelsAndParameters[[1]]
 
