work in examples README

--- a/README.Rmd
+++ b/README.Rmd
@@ -37,10 +37,10 @@ devtools::install_github("nicoscattaneo/PixSim")
 
 ### Example 1
 Simulate 15 years of forest growth for a 10x20 km region in central Norway using
-the growth models of Maleki et al. (2022). The simulation is conducted in 5-year
-intervals, with the results of each time step saved locally for further analysis.
-For detailed model information, refer to the publication: 
-Maleki et al. 2022, DOI: [https://doi.org/10.1080/02827581.2022.2056632]."
+stand-level growth models of the main species groups in Norway. The simulation 
+is conducted in 5-year intervals, with the results of each time step saved 
+locally for further analysis.
+For detailed model information, see [Maleki et al. 2022](DOI: [https://doi.org/10.1080/02827581.2022.2056632]).
 
 
 ```{r, include=FALSE}
@@ -79,8 +79,8 @@ PixSim(Data = PixelTableCopy,
        ModelsAndParameters = myMM)
 
 ## Check the results
-Results <- list.files(Fold, full.names = TRUE)
-lapply(Results, fst::read_fst, as.data.table = TRUE, from = 1, to = 5)
+## Results <- list.files(Fold, full.names = TRUE)
+## lapply(Results, fst::read_fst, as.data.table = TRUE, from = 1, to = 5)
 
 ```
 
