work in examples README

--- a/README.Rmd
+++ b/README.Rmd
@@ -40,7 +40,7 @@ Simulate 15 years of forest growth for a 10x20 km region in central Norway using
 stand-level growth models of the main species groups in Norway. The simulation 
 is conducted in 5-year intervals, with the results of each time step saved 
 locally for further analysis.
-For detailed model information, see [Maleki et al. 2022](DOI: [https://doi.org/10.1080/02827581.2022.2056632]).
+For detailed model information, see [Maleki et al. 2022](https://doi.org/10.1080/02827581.2022.2056632).
 
 
 ```{r, include=FALSE}
