--- a/README.Rmd
+++ b/README.Rmd
@@ -21,8 +21,11 @@ knitr::opts_chunk$set(
 # PixSim
 
 ## Overview
+**PixSim** is a flexible, cross-platform, open-source platform designed 
+for stand-level forest growth simulations. It operates at the pixel level 
+using high-resolution, wall-to-wall forest resource maps.
+(Work in progress...)
 
-Work in progress.
 
 ## Installation
 
@@ -109,6 +112,7 @@ other regions in Norway can be obtained from
 [Kilden -->  Skogressurskart (SR16)](https://kilden.nibio.no/).
 
 ```{r Pixeltable1, warning=FALSE}
+## See `?raster4pixeltable` for a detailed description of this dataset.
 Dir <- system.file("extdata", package = "PixSim")
 Files <- list.files(Dir, full.names = TRUE, pattern = "\\.tif$")
 Names <- sapply(strsplit(basename(Files), "\\."), `[`, 1)
