work on examples README file[C

--- a/README.Rmd
+++ b/README.Rmd
@@ -81,11 +81,31 @@ PixSim(Data = PixelTableCopy,
 ```
 
 ### Example 2
-
-Work in progress.
+There are also functions available to initialize pixels after the forest has been harvested:
 
 ```{r example2}
-## Some code
+Functions <- list(GrowthModels = GrowthModels,
+                  RegFunction = RegFunction, 
+                  PostRegFunction = PostRegFunction)
+
+myMM <- ModelsAndParameters[[1]]
+mySSP <- c(1, 2, 3)
+
+Fold <- tempfile()
+dir.create(Fold)
+
+## See `?RegData` for a detailed description of this dataset.
+PixSim(Data = PixelTable,
+       Np = 10, 
+       nSpecies = mySSP,
+       functions = Functions,
+       WriteOut = TRUE,
+       LocalFldr = Fold,
+       ModelsAndParameters = myMM,
+       RegData = RegData)
+## Check the results
+## Results <- list.files(Fold, full.names = TRUE)
+## lapply(Results, fst::read_fst, as.data.table = TRUE, from = 1, to = 5)
 ```
 
 ### Example 3
@@ -98,10 +118,10 @@ Work in progress.
 
 
 ### Pixeltable
-A PixelTable is a dataframe-like object that groups data from various maps 
-containing forest resource information. It is a highly useful format that 
-offers flexibility for performing complex operations on the information 
-contained in the maps.
+A PixelTable is a dataframe-like object that groups pixel-level information 
+from various raster containing forest resource information. It is a highly 
+useful format that offers flexibility for performing complex operations on the 
+information contained in the maps.
 
 
 PixSim package contains raster files describing various forest resource 
