--- a/README.Rmd
+++ b/README.Rmd
@@ -49,7 +49,8 @@ library("data.table")
 
 ## See below in the "Basic usage - Pixeltable" section to learn 
 ## how to create a PixelTable from forest resource maps.
-PixelTableCopy <- data.table::copy(PixelTable)
+head(PixelTable, 3)
+dim(PixelTable)
 
 ## Here we use a function that implement stand-level 
 ## growth models of the main species groups in Norway
@@ -66,7 +67,7 @@ mySSP <- c(1, 2, 3)
 Fold <- tempfile()
 dir.create(Fold)
 
-PixSim(Data = PixelTableCopy,
+PixSim(Data = PixelTable,
        Np = 3, ## 3 5-year projections
        nSpecies = mySSP,
        functions = Functions,
