--- a/README.Rmd
+++ b/README.Rmd
@@ -36,7 +36,7 @@ devtools::install_github("nicoscattaneo/PixSim")
 
 ## General usage
 
-### Example 1
+### Basic Forest Growth Simulation.
 Simulate 50 years of forest growth for a 10x20 km region in central Norway using
 stand-level growth models of the main species groups in Norway. The simulation 
 is conducted in 5-year intervals, with the results of each time step saved 
@@ -47,7 +47,7 @@ For detailed model information, see [Maleki et al. (2022)](https://doi.org/10.10
 library("PixSim")
 library("data.table")
 
-## See below in the "Basic usage - Pixeltable" section to learn 
+## See below in the "Pixeltable" section to learn 
 ## how to create a PixelTable from forest resource maps.
 head(PixelTable, 3)
 dim(PixelTable)
@@ -83,7 +83,7 @@ PixSim(Data = PixelTable,
 
 ---
 
-### Example 2
+### Use Forest Regeneration Routines.
 There are also functions available to initialize pixels after the forest has been harvested:
 
 ```{r example2}
@@ -114,8 +114,7 @@ PixSim(Data = PixelTable,
 
 ---
 
-### Example 3
-
+### Apply Forest Management.
 Harvest 80% of the total volume increase per time step. The `SetAside` function 
 is also used to set environmental restrictions on 20% of each forest stand 
 that will never be harvested.
@@ -199,8 +198,7 @@ fst::read_fst(Results[3], as.data.table = TRUE, from = 1, to = 5)
 
 ---
 
-### Example 4
-
+### Climate Change and Forest Growth.
 The effects of climate change on forest growth can also be included in the 
 simulations. The function `SIchange` applies climate-induced changes in forest 
 productivity. These changes are available in the `SI_changes` dataset and were 
