add Pixeltabel to raster explanation

--- a/README.Rmd
+++ b/README.Rmd
@@ -294,9 +294,29 @@ head(PixeTable1)
 
 This PixelTable is ready for use within the PixSim framework.
 
+--- 
 
+### Bonus... Converting a PixelTable Back to a Raster
 
+Are you wondering how to retrieve your forest data as a raster image after 
+running simulations?
+Here's an example of how to do it!
 
+```{r Pixeltable5, warning=FALSE}
+
+## Remake the Site Index (SI_m) raster from the PixelTable.
+RasterInfo <- rast(Files[5])
+Dim <- ext(RasterInfo)
+Raster <- rast(ncols = ncol(RasterInfo), nrows = nrow(RasterInfo),
+               xmin = xmin(Dim), xmax = xmax(Dim),
+               ymin = ymin(Dim), ymax = ymax(Dim),
+               crs = crs(RasterInfo))
+
+Raster[cellFromXY(Raster, PixeTable1[, 1:2])] <- PixeTable1[[5]]
+names(Raster) <- names(PixeTable1)[5]
+Raster
+
+```
 
 
 
