--- a/README.Rmd
+++ b/README.Rmd
@@ -18,14 +18,15 @@ knitr::opts_chunk$set(
 
 <img src="inst/extdata/logo.png" align="right" width="25%" />
 
-# PixSim
+### PixSim
 
-## Overview
+
+### Overview
 **PixSim** is a flexible, cross-platform, open-source tool designed 
 for stand-level forest growth simulations. It operates at the pixel level 
 using high-resolution, wall-to-wall forest resource maps.
 
-## Installation
+### Installation
 
 You can install the development version of PixSim from [GitHub](https://github.com/) with:
 
@@ -34,7 +35,7 @@ You can install the development version of PixSim from [GitHub](https://github.c
 devtools::install_github("nicoscattaneo/PixSim")
 ```
 
-## General usage
+### General usage
 
 ### Basic Forest Growth Simulation
 Simulate 50 years of forest growth for a 10x20 km region (16x16 m resolution) in central Norway using
